<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context=".Caculator"
        android:background="#000000" >

	<TextView
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarFadeDuration="2000"
        android:layout_height="200dp"/>

	<TextView
	    android:layout_width="fill_parent"
        android:background="#000000"
	    android:layout_height="2dp"/>

	<TextView
	    android:id="@+id/result"
	    android:layout_width="fill_parent"
        android:background="#FFFFFF"
        android:textColor="#000000"
	    android:layout_height="40dp"/>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">"
   	    <Button 
   	        android:id="@+id/seven"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/seven"/>

   	    <Button 
   	        android:id="@+id/eight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/eight"/>

  	    <Button 
   	        android:id="@+id/nine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/nine"/>

        <Button 
            android:id="@+id/add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/add"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button 
   	        android:id="@+id/four"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/four"/>

      	<Button 
            android:id="@+id/five"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/five"/>

        <Button 
   	        android:id="@+id/six"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/six"/>

        <Button 
   	        android:id="@+id/subtract"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/subtract"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button 
   	        android:id="@+id/one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/one"/>

        <Button 
            android:id="@+id/two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/two"/>

        <Button 
            android:id="@+id/three"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/three"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/multiply"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button 
            android:id="@+id/dot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/dot"/>

        <Button 
            android:id="@+id/zero"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/zero"/>

        <Button 
            android:id="@+id/equal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/equal"/>

        <Button 
            android:id="@+id/divide"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/divide"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button 
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/clear"/>

        <Button 
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>